--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=gestion-incidencias
+spring.datasource.url=jdbc:postgresql://localhost:5432/incidencias_db
+spring.datasource.username=postgres
+spring.datasource.password=Napo300399
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+server.port=8081
